--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -151,18 +151,31 @@
       "Theta_0 standard error:  3607194.068641336\n",
       "Theta_1:  55380.136616120675\n",
       "Theta_1 standard error:  1784.8553721482665\n",
-      "           Time  Total prediction  Total actual\n",
-      "0   2024.083333           3282689       3223805\n",
-      "1   2024.166667           3287304       3231177\n",
-      "2   2024.250000           3291919       3237629\n",
-      "3   2024.333333           3296534       3244611\n",
-      "4   2024.416667           3301149       3255073\n",
-      "5   2024.500000           3305764       3254569\n",
-      "6   2024.583333           3310379       3258060\n",
-      "7   2024.666667           3314994       3256515\n",
-      "8   2024.750000           3319609       3252275\n",
-      "9   2024.833333           3324224       3253059\n",
-      "10  2024.916667           3328839       3258025\n"
+      "           Time  Total prediction  Total actual  95% CI lower bound  \\\n",
+      "0   2024.083333           3282689       3223805             3227154   \n",
+      "1   2024.166667           3287304       3231177             3231769   \n",
+      "2   2024.250000           3291919       3237629             3236384   \n",
+      "3   2024.333333           3296534       3244611             3240999   \n",
+      "4   2024.416667           3301149       3255073             3245614   \n",
+      "5   2024.500000           3305764       3254569             3250229   \n",
+      "6   2024.583333           3310379       3258060             3254844   \n",
+      "7   2024.666667           3314994       3256515             3259459   \n",
+      "8   2024.750000           3319609       3252275             3264074   \n",
+      "9   2024.833333           3324224       3253059             3268689   \n",
+      "10  2024.916667           3328839       3258025             3273304   \n",
+      "\n",
+      "    95% CI upper bound  \n",
+      "0              3338225  \n",
+      "1              3342840  \n",
+      "2              3347455  \n",
+      "3              3352070  \n",
+      "4              3356685  \n",
+      "5              3361300  \n",
+      "6              3365915  \n",
+      "7              3370530  \n",
+      "8              3375145  \n",
+      "9              3379760  \n",
+      "10             3384375  \n"
      ]
     },
     {
@@ -233,6 +246,8 @@
     "df = pd.DataFrame(x_future[:,1], columns=[\"Time\"])\n",
     "df['Total prediction'] = np.array(prediction, dtype=int)\n",
     "df['Total actual'] = np.array(y_future, dtype=int)\n",
+    "df['95% CI lower bound'] = np.array(prediction-confidence, dtype=int)\n",
+    "df['95% CI upper bound'] = np.array(prediction+confidence, dtype=int)\n",
     "\n",
     "print(df)\n",
     "\n",
@@ -250,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -360,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -453,7 +468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -488,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
