--- a/assignment2.ipynb
+++ b/assignment2.ipynb
@@ -773,7 +773,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "playground",
    "language": "python",
    "name": "python3"
   },
@@ -787,7 +787,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.5"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
